Fixed miss align border on Chrome

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -22,7 +22,6 @@ table thead tr th.sort-desc:after {
 
 .fish-icon {
   height: 44px;
-  width: 44px;
 }
 
 .bug-icon {
@@ -32,6 +31,8 @@ table thead tr th.sort-desc:after {
 .fish-image,
 .bug-image {
   text-align: center;
+  border-bottom: none;
+  border-top: 1px solid rgb(55, 59, 62);
 }
 
 #filters {
